--- a/day_04/BTVN/b2.css
+++ b/day_04/BTVN/b2.css
@@ -9,20 +9,32 @@
 body {
   font-family: "Roboto", sans-serif;
 }
-img {
+.image > img {
   max-width: 100%;
-  display: block;
-  margin: auto;
-  width: 370px;
-  height: 250px;
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
 }
+/* img {
+  max-width: 100%;
+    display: block;
+    margin: auto;
+    width: 100%;
+    object-fit: cover;
+    height: 250px;
+} */
 .card {
   width: 350px;
+  /* height: 550px; */
   box-shadow: 0 2px 4px rgb(0 0 0 / 55%);
   border-radius: 4px;
   overflow: hidden;
-  flex-basis: 27.33%;
+  /* flex-basis: 27.33%; */
   margin : 1rem;
+  /* margin-bottom: 1rem;
+  margin-top: 1px; */
   
 }
 .content h2 {
@@ -88,7 +100,7 @@ text-decoration: none;
   /* border: 1px solid black; */
   /* border-radius: 4px; */
   margin: auto;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   overflow: hidden;
   width: 90%;
   padding: 50px 0;
@@ -184,4 +196,128 @@ p {
     } */
 .Diachi .rating a {
   text-decoration: none;
+}
+
+
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  margin: auto;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.header {
+  height: 60px;
+  background-color: #34455c;
+
+  display: flex;
+  justify-content: space-between;
+  padding: 0 16px;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  width: 120px;
+}
+
+.side-bar {
+  display: flex;
+}
+
+.menu > ul {
+  display: flex;
+}
+
+.menu > ul > li {
+  color: #fff;
+  margin: 0 16px;
+  height: 60px;
+  /* line-height: 60px; */
+  display: flex;
+  align-items: center;
+
+  position: relative;
+}
+
+.menu > ul > li:hover .sub-menu {
+  display: block;
+}
+
+.sub-menu {
+  box-shadow: 0 0 10px rgb(0 0 0 / 15%);
+  width: 200px;
+  background-color:white;
+
+  position: absolute;
+  right: 0;
+  top: 100%;
+
+  display: none;
+}
+
+.sub-menu li {
+  color: #464646;
+  text-align: center;
+  padding: 0.7rem 1rem;
+}
+
+.sub-menu li:hover {
+  background-color: #c4c4c4;
+  color: #fff;
+}
+.avatar {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.cart{
+  display: flex;
+  align-items: center;
+  position: relative;
+  text-align: center;
+  margin-right: 1rem;
+}
+.cart-icon{
+  color: #ffffff;
+  font-size: 1.4rem;
+  margin: 0 16px;
+}
+.cart-count{
+  background-color: #26a69a;
+  left: 20px;
+  position: absolute;
+  top: 11px;
+  left: 34px;
+  padding: 0.25em 0.4em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25rem;
+}
+.avatar{
+  display: flex;
+  text-align: center;
+  margin: auto;
 }
