--- a/day_05/drop.css
+++ b/day_05/drop.css
@@ -41,9 +41,9 @@ body {
   display: block;
   font-size: 13px;
 }
-/* #mainnav li:hover{
-    background: #17306E;
-  } */
+#mainnav li:hover{
+    background: #e0dddd;
+  }
 #mainnav .sub-menu {
   position: absolute;
   left: 200px;
@@ -53,7 +53,9 @@ body {
   text-align: left;
   /* border-left: 1px solid #fff; */
   font-size: 90%;
-  border-radius: 0px 10px 10px 0px;
+  /* border-radius: 0px 10px 10px 0px; */
+  box-shadow: 0 2px 4px rgb(0 0 0 / 35%);
+  /* border-left: 1px solid #757575; */
 }
 #mainnav li:hover .sub-menu {
   display: block;
@@ -65,8 +67,9 @@ body {
   left: 200px;
   top: 0;
   width: 200px;
-  /* border-left: 1px solid #fff; */
-  border-radius: 0px 10px 10px 0px;
+  /* border-left: 1px solid #757575; */
+  box-shadow: 0 2px 4px rgb(0 0 0 / 35%);
+  /* border-radius: 0px 10px 10px 0px; */
   display: none;
 }
 #mainnav .sub-menu li:hover .sub-menu2 {
@@ -77,8 +80,8 @@ body {
   left: 200px;
   top: 0;
   width: 200px;
-  /* border-left: 1px solid #fff; */
-  border-radius: 0px 10px 10px 0px;
+  /* border-left: 10px solid #f8f8f8; */
+  /* border-radius: 0px 50px 10px 0px; */
   display: none;
 }
 #mainnav .sub-menu2 li:hover .sub-menu3 {
