--- a/day_05/style.css
+++ b/day_05/style.css
@@ -32,11 +32,12 @@ ul {
 
 .menu {
     background-color: #fff;
+    position: relative;
 }
 
 .menu-item {
     width: 200px;
-    position: relative;
+    
 }
 
 .menu-item p {
@@ -74,8 +75,9 @@ ul {
     left: 200px;
     background-color: aquamarine;
     display: none;
+    height: 100%;
 }
 
-.menu-item:hover .sub-menu {
+.menu-item:hover > .sub-menu {
     display: block;
 }
