--- a/day_04/BTVN/b2.2.css
+++ b/day_04/BTVN/b2.2.css
@@ -25,6 +25,15 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 0 16px;
+
+    
+      
+      position: sticky;
+      z-index: 10;
+      top: 0;
+      
+      
+  
   }
   
   .logo {
