--- a/Techlead/Tag Management/style.css
+++ b/Techlead/Tag Management/style.css
@@ -19,6 +19,8 @@ body {
   text-align: center;
   height: 50px;
   color: white;
+  width: 144opx ;
+  height: 56px;
 }
 .icon {
   margin-left: 720px;
@@ -88,20 +90,58 @@ td > button {
   text-align: center;
   padding: 20px;
 }
-.sort {
-  /* display: inline-block;
+ .sort {
+  display: inline-block;
+  
   position: relative;
-  width: 5px;
-  height: 16px; */
+  /* width: 5px; */
+  height: 16px;
+  top: 10px;
 }
 .sort i {
-  /* position: absolute;
+ 
 width: 8px;
 height: 5px;
 left: 375px;
 top: 194px;
-
-background: #000000;
+/* position: absolute; */
+/* background: #000000; */
 opacity: 0.7;
-transform: rotate(-180deg); */
+transform: rotate(-180deg);
+}
+
+.paginationgroup {
+  position: relative;
+  height: 80px;
+}
+.paginationgroup p {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  top: 50%;
+  position: absolute;
+  transform: translate(0%, -50%);
+  line-height: 22px;
+  margin: 0;
+  left: 72%;
+}
+.paginationbar {
+  top: 50%;
+  position: absolute;
+  transform: translate(0%, -50%);
+  display: inline-block;
+  margin: 0;
+  right: 5%;
+}
+#disable {
+  background-color: #eee;
+  border: 1px solid #ccc;
+}
+.paginationbar a {
+  color: black;
+  float: left;
+  padding: 8px 14px;
+  text-decoration: none;
+  border: 1px solid #999;
 }
